#Changelog
Alle veranderingen worden gedocumenteerd in dit bestand

##[0.0.1] - 12/11/2018
###opleidingskeuzepagina toegevoegd
- Background toegevoegd
- Drop down buttons toegevoegd
- Start button toegevoegd 

##[0.0.2] - 13/11/2018
###overzichtpagina toegevoegd
- Link toegevoegd van start button
- Background toegevoegd
- Clickable images toegevoegd
- Link toegevoegd aan clickable image naar pagina "profiel" en "vragen"
- icoon toegevoegd aan app
- splashscreen toegevoegd aan app

##[0.0.3] - 22/11/2018
###overzichtpagina toegevoegd
- APK gemaakt van Applicatie 
- bootstrap menu is niet werkend 
- fout oplossen in bootstrap menu

##[0.0.4] - 26/11/2018
###overzichtpagina toegevoegd
- Splashscreen plugin toegevoegd aan phonegap (is alleen nogmaar ondersteund voor windows);
- Code opgeschoond nieuwe qualifier toegevoegd 
- RES folder verplaatst naar rootfolder. 
- Splash werkt op apk na nieuwe commit. 
- Testen of GIF ook toegevoegd kan worden. 
